data and plots are reproducible, moving on

--- a/figures/SMfigs/SM_reflection_coefficient.ipynb
+++ b/figures/SMfigs/SM_reflection_coefficient.ipynb
@@ -125,7 +125,7 @@
     "plt.plot(panel_S11['xmeas'][::2],np.imag(panel_S11['ymeas'])[::2],'s',c=cmap(0.5),markerfacecolor='none',label='Im(S$_{11}$)')\n",
     "plt.plot(panel_S11['xtheo'],np.imag(panel_S11['ytheo']),c=cmap(0.9),lw=1)\n",
     "plt.xlabel('Frequency (GHz)')\n",
-    "plt.ylabel('Re(S$_{11}$), Im(S$_{11}$) (a.u.)')\n",
+    "plt.ylabel('Re(S$_{11}$), Im(S$_{11}$)')\n",
     "plt.xlim(7.432,7.444)\n",
     "# plt.legend(loc='lower right')\n",
     "\n",
