--- a/figures/SMfigs/SM_Duffing_on_resonance.ipynb
+++ b/figures/SMfigs/SM_Duffing_on_resonance.ipynb
@@ -38,6 +38,19 @@
   {
    "cell_type": "code",
    "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import seaborn as sns\n",
+    "sns.set()\n",
+    "sns.set_style('white')\n",
+    "sns.set_style('ticks')\n",
+    "plt.style.use('../my_rcparams.mplstyle')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2019-12-15T16:18:42.095738Z",
@@ -51,7 +64,7 @@
        "dict_keys(['xmeas', 'ymeas', 'ymeaslabel', 'xtheo', 'ytheo', 'ytheolabel', 'xtheo2', 'ytheo2', 'ytheolabel2', 'xlabel', 'ylabel'])"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -64,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2019-12-15T16:18:42.101593Z",
@@ -78,7 +91,7 @@
        "dict_keys(['xmeas', 'ymeas', 'xtheo', 'ytheo', 'xtheo2', 'ytheo2', 'xlabel', 'ylabel', 'xmin', 'ymin'])"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -91,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2019-12-15T16:18:42.174135Z",
@@ -106,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2019-12-15T16:18:42.523781Z",
@@ -121,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2019-12-15T16:19:42.371059Z",
@@ -171,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2019-12-05T15:50:34.846776Z",
@@ -185,7 +198,7 @@
        "18.725531574306814"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -197,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2019-12-05T15:50:36.921393Z",
@@ -211,7 +224,7 @@
        "2.7918173072635493"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
