--- a/figures/SMfigs/SM_JJarrayCPW_vs_I.ipynb
+++ b/figures/SMfigs/SM_JJarrayCPW_vs_I.ipynb
@@ -38,6 +38,19 @@
   {
    "cell_type": "code",
    "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import seaborn as sns\n",
+    "sns.set()\n",
+    "sns.set_style('white')\n",
+    "sns.set_style('ticks')\n",
+    "plt.style.use('../my_rcparams.mplstyle')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2019-12-13T11:42:45.313459Z",
@@ -51,7 +64,7 @@
        "dict_keys(['l', 'N', 'I', 'Anh', 'f0'])"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -63,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2019-12-13T11:42:46.345938Z",
@@ -78,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2019-12-13T11:42:46.519876Z",
@@ -93,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2019-12-13T12:01:11.951402Z",
