--- a/figures/SMfigs/SM_Pin_detuning.ipynb
+++ b/figures/SMfigs/SM_Pin_detuning.ipynb
@@ -38,6 +38,19 @@
   {
    "cell_type": "code",
    "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import seaborn as sns\n",
+    "sns.set()\n",
+    "sns.set_style('white')\n",
+    "sns.set_style('ticks')\n",
+    "plt.style.use('../my_rcparams.mplstyle')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2019-12-17T08:16:48.210986Z",
@@ -51,7 +64,7 @@
        "dict_keys(['xmeas', 'ymeas', 'xtheo0', 'ytheo0', 'shift0', 'xtheo1', 'ytheo1', 'shift1', 'xlabel', 'ylabel'])"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -64,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2019-12-17T08:16:04.004638Z",
@@ -79,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2019-12-17T08:16:04.283035Z",
@@ -94,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2019-12-17T08:18:14.730906Z",
