--- a/figures/fig4/Figure4.ipynb
+++ b/figures/fig4/Figure4.ipynb
@@ -40,6 +40,19 @@
   {
    "cell_type": "code",
    "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import seaborn as sns\n",
+    "sns.set()\n",
+    "sns.set_style('white')\n",
+    "sns.set_style('ticks')\n",
+    "plt.style.use('../my_rcparams.mplstyle')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2019-12-16T17:59:55.606144Z",
@@ -60,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2019-12-16T17:59:55.610939Z",
@@ -76,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2019-12-16T17:59:55.615795Z",
@@ -93,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2019-12-16T17:59:58.328100Z",
@@ -105,9 +118,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "findfont: Font family ['sans-serif'] not found. Falling back to DejaVu Sans.\n",
       "/opt/conda/lib/python3.7/site-packages/matplotlib/colors.py:1110: RuntimeWarning: invalid value encountered in less_equal\n",
       "  mask |= resdat <= 0\n",
-      "findfont: Font family ['sans-serif'] not found. Falling back to DejaVu Sans.\n",
       "findfont: Font family ['sans-serif'] not found. Falling back to DejaVu Sans.\n",
       "findfont: Font family ['sans-serif'] not found. Falling back to DejaVu Sans.\n"
      ]
