--- a/figures/SMfigs/SM_plusminus.ipynb
+++ b/figures/SMfigs/SM_plusminus.ipynb
@@ -41,6 +41,19 @@
   {
    "cell_type": "code",
    "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import seaborn as sns\n",
+    "sns.set()\n",
+    "sns.set_style('white')\n",
+    "sns.set_style('ticks')\n",
+    "plt.style.use('../my_rcparams.mplstyle')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2019-12-20T09:29:57.172569Z",
@@ -61,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2019-12-20T09:31:01.054598Z",
@@ -77,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2019-12-20T09:29:57.186472Z",
@@ -94,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2019-12-20T09:33:30.774111Z",
@@ -106,6 +119,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "findfont: Font family ['sans-serif'] not found. Falling back to DejaVu Sans.\n",
       "/opt/conda/lib/python3.7/site-packages/matplotlib/colors.py:1110: RuntimeWarning: invalid value encountered in less_equal\n",
       "  mask |= resdat <= 0\n",
       "findfont: Font family ['sans-serif'] not found. Falling back to DejaVu Sans.\n",
@@ -228,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2019-12-20T09:30:00.150166Z",
@@ -242,7 +256,7 @@
        "(8.901255382724944, 9.517265775086448)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
