--- a/figures/SMfigs/SM_reflection_coefficient.ipynb
+++ b/figures/SMfigs/SM_reflection_coefficient.ipynb
@@ -15,8 +15,8 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-12-10T16:40:26.648105Z",
-     "start_time": "2019-12-10T16:40:26.400672Z"
+     "end_time": "2020-05-15T17:27:23.749589Z",
+     "start_time": "2020-05-15T17:27:23.464646Z"
     }
    },
    "outputs": [],
@@ -39,20 +39,51 @@
   {
    "cell_type": "code",
    "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import seaborn as sns\n",
+    "sns.set()\n",
+    "sns.set_style('white')\n",
+    "sns.set_style('ticks')\n",
+    "plt.style.use('../my_rcparams.mplstyle')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-12-10T16:40:26.746769Z",
-     "start_time": "2019-12-10T16:40:26.730925Z"
+     "end_time": "2020-05-15T17:27:24.213055Z",
+     "start_time": "2020-05-15T17:27:23.751162Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "import seaborn as sns\n",
+    "sns.set()\n",
+    "sns.set_style('white')\n",
+    "sns.set_style('ticks')\n",
+    "plt.style.use('../my_rcparams.mplstyle')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-05-15T17:27:24.220905Z",
+     "start_time": "2020-05-15T17:27:24.214789Z"
     }
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "dict_keys(['xmeas', 'ymeas', 'ymeaslabel', 'f0', 'xtheo', 'ytheo', 'ytheolabel', 'xlabel', 'ylabel'])"
+       "dict_keys(['xmeas', 'ymeas', 'ymeaslabel', 'f0', 'xtheo', 'ytheo', 'ytheolabel', 'xraw', 'yraw', 'xraw_th', 'yraw_th', 'xlabel', 'ylabel'])"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -65,11 +96,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-12-10T16:40:27.108438Z",
-     "start_time": "2019-12-10T16:40:27.102718Z"
+     "end_time": "2020-05-15T17:27:24.225161Z",
+     "start_time": "2020-05-15T17:27:24.222584Z"
     }
    },
    "outputs": [],
@@ -81,11 +112,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-12-10T16:40:27.428948Z",
-     "start_time": "2019-12-10T16:40:27.423297Z"
+     "end_time": "2020-05-15T17:27:24.230957Z",
+     "start_time": "2020-05-15T17:27:24.227727Z"
     }
    },
    "outputs": [],
@@ -96,11 +127,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-12-10T16:41:57.908893Z",
-     "start_time": "2019-12-10T16:41:57.440242Z"
+     "end_time": "2020-05-15T17:27:25.365090Z",
+     "start_time": "2020-05-15T17:27:24.232407Z"
     }
    },
    "outputs": [
@@ -116,10 +147,20 @@
    "source": [
     "plt.style.use('../my_rcparams.mplstyle')\n",
     "\n",
-    "fig = plt.figure(figsize=cm2inch(17.6,6))\n",
-    "gs = gridspec.GridSpec(1, 3, wspace=0.4)\n",
+    "fig = plt.figure(figsize=cm2inch(17.6,6),constrained_layout=True)\n",
+    "gs = fig.add_gridspec(1, 3, wspace=0.4)\n",
     "\n",
-    "axa = fig.add_subplot(gs[0,:2])\n",
+    "axa = fig.add_subplot(gs[0,0])\n",
+    "plt.plot(panel_S11['xraw'][::2],np.real(panel_S11['yraw'])[::2],'o',c=cmap(0.1),markerfacecolor='none',label='Re(S$_{11}$)')\n",
+    "plt.plot(panel_S11['xraw_th'],np.real(panel_S11['yraw_th']),c=cmap(0.9),lw=1)\n",
+    "plt.plot(panel_S11['xraw'][::2],np.imag(panel_S11['yraw'])[::2],'s',c=cmap(0.5),markerfacecolor='none',label='Im(S$_{11}$)')\n",
+    "plt.plot(panel_S11['xraw_th'],np.imag(panel_S11['yraw_th']),c=cmap(0.9),lw=1)\n",
+    "plt.xlabel('Frequency (GHz)')\n",
+    "plt.ylabel('Re(S$_{11}$), Im(S$_{11}$)')\n",
+    "plt.xlim(7.432,7.444)\n",
+    "\n",
+    "\n",
+    "axb = fig.add_subplot(gs[0,1])\n",
     "plt.plot(panel_S11['xmeas'][::2],np.real(panel_S11['ymeas'])[::2],'o',c=cmap(0.1),markerfacecolor='none',label='Re(S$_{11}$)')\n",
     "plt.plot(panel_S11['xtheo'],np.real(panel_S11['ytheo']),c=cmap(0.9),lw=1)\n",
     "plt.plot(panel_S11['xmeas'][::2],np.imag(panel_S11['ymeas'])[::2],'s',c=cmap(0.5),markerfacecolor='none',label='Im(S$_{11}$)')\n",
@@ -127,18 +168,19 @@
     "plt.xlabel('Frequency (GHz)')\n",
     "plt.ylabel('Re(S$_{11}$), Im(S$_{11}$)')\n",
     "plt.xlim(7.432,7.444)\n",
-    "# plt.legend(loc='lower right')\n",
+    "#plt.legend(loc='lower right')\n",
     "\n",
-    "axb = fig.add_subplot(gs[0,2], projection='polar')\n",
-    "# ax = fig.add_subplot(111, projection='polar')\n",
+    "axc = fig.add_subplot(gs[0,2], projection='polar')\n",
     "plt.plot(np.angle(panel_S11['ymeas']),np.abs(panel_S11['ymeas']),'o',c=cmap(0.1),markerfacecolor='none')\n",
     "plt.plot(np.angle(panel_S11['ytheo']),np.abs(panel_S11['ytheo']),c=cmap(0.9),lw=1)\n",
-    "axb.set_rlim(0,1.1)\n",
+    "axc.set_rlim(0,1.1)\n",
     "    \n",
-    "axa.text(-0.12,0.96, '(a)', fontsize=figtextsize,color='black', weight='bold', transform=axa.transAxes, verticalalignment = 'center', horizontalalignment = 'center')\n",
-    "axb.text(-0.24,1.1, '(b)', fontsize=figtextsize,color='black', weight='bold', transform=axb.transAxes, verticalalignment = 'center', horizontalalignment = 'center')\n",
+    "axa.text(-0.37,0.96, '(a)', fontsize=figtextsize,color='black', weight='bold', transform=axa.transAxes, verticalalignment = 'center', horizontalalignment = 'center')\n",
+    "axb.text(-0.33,0.96, '(b)', fontsize=figtextsize,color='black', weight='bold', transform=axb.transAxes, verticalalignment = 'center', horizontalalignment = 'center')\n",
+    "axc.text(-0.1,1.05, '(c)', fontsize=figtextsize,color='black', weight='bold', transform=axc.transAxes, verticalalignment = 'center', horizontalalignment = 'center')\n",
     "\n",
     "plt.savefig('SM_reflection_coefficient.pdf',bbox_inches='tight',dpi=dpi)\n",
+    "#plt.show()\n",
     "plt.close()"
    ]
   },
