--- a/figures/fig5/Figure5.ipynb
+++ b/figures/fig5/Figure5.ipynb
@@ -41,6 +41,19 @@
   {
    "cell_type": "code",
    "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import seaborn as sns\n",
+    "sns.set()\n",
+    "sns.set_style('white')\n",
+    "sns.set_style('ticks')\n",
+    "plt.style.use('../my_rcparams.mplstyle')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2019-12-17T10:26:55.526290Z",
@@ -54,7 +67,7 @@
        "dict_keys(['x1', 'y1', 'label', 'xtheo', 'ytheo', 'xlabel', 'ylabel', 'params'])"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -67,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2019-12-17T10:26:55.535423Z",
@@ -81,7 +94,7 @@
        "dict_keys(['xopt', 'yopt'])"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -94,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2019-12-17T10:26:55.565050Z",
@@ -120,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2019-12-17T10:26:55.579177Z",
@@ -136,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2019-12-17T10:26:55.585904Z",
@@ -151,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2019-12-17T10:26:55.596526Z",
@@ -166,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2019-12-17T10:26:55.604924Z",
@@ -180,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2019-12-17T10:26:57.141805Z",
@@ -249,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2019-12-17T10:26:57.151622Z",
@@ -263,7 +276,7 @@
        "8.3673469388"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -274,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2019-12-17T10:26:57.171159Z",
@@ -288,7 +301,7 @@
        "9.0"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
