full runthrough successful

--- a/Plot_data_Fig4.ipynb
+++ b/Plot_data_Fig4.ipynb
@@ -232,7 +232,7 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7fa458c2b290>]"
+       "[<matplotlib.lines.Line2D at 0x7f2d75803310>]"
       ]
      },
      "execution_count": 9,
@@ -464,7 +464,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.contour.QuadContourSet at 0x7fa4561ce110>"
+       "<matplotlib.contour.QuadContourSet at 0x7f2d6a84dd90>"
       ]
      },
      "execution_count": 15,
@@ -503,7 +503,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.contour.QuadContourSet at 0x7fa4560df490>"
+       "<matplotlib.contour.QuadContourSet at 0x7f2d6aafa5d0>"
       ]
      },
      "execution_count": 16,
@@ -560,7 +560,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7fa45601ed10>"
+       "<matplotlib.legend.Legend at 0x7f2d6aa20dd0>"
       ]
      },
      "execution_count": 17,
@@ -822,7 +822,7 @@
     {
      "data": {
       "text/plain": [
-       "<mpl_toolkits.mplot3d.art3d.Path3DCollection at 0x7fa455eb2f90>"
+       "<mpl_toolkits.mplot3d.art3d.Path3DCollection at 0x7f2d6a8c6c50>"
       ]
      },
      "execution_count": 27,
@@ -1880,7 +1880,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.colorbar.Colorbar at 0x7fa4540fbb10>"
+       "<matplotlib.colorbar.Colorbar at 0x7f2d68936e90>"
       ]
      },
      "execution_count": 53,
@@ -2873,7 +2873,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.colorbar.Colorbar at 0x7fa44f733d10>"
+       "<matplotlib.colorbar.Colorbar at 0x7f2d6813bc10>"
       ]
      },
      "execution_count": 86,
@@ -2991,7 +2991,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.colorbar.Colorbar at 0x7fa44fadddd0>"
+       "<matplotlib.colorbar.Colorbar at 0x7f2d68f09fd0>"
       ]
      },
      "execution_count": 90,
