--- a/JJarrayCPW_analytical_1um_01calcs.ipynb
+++ b/JJarrayCPW_analytical_1um_01calcs.ipynb
@@ -896,7 +896,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.lines.Line2D at 0x7f78e8ef7990>"
+       "<matplotlib.lines.Line2D at 0x7f073fa6e610>"
       ]
      },
      "execution_count": 31,
