--- a/JJarrayCPW_analytical_1um_04sens.ipynb
+++ b/JJarrayCPW_analytical_1um_04sens.ipynb
@@ -41,7 +41,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7f9ab559d110>"
+       "<matplotlib.legend.Legend at 0x7f18e0c8fd90>"
       ]
      },
      "execution_count": 2,
