--- a/Plot_data_Fig2.ipynb
+++ b/Plot_data_Fig2.ipynb
@@ -171,7 +171,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.PathCollection at 0x7f425689c150>"
+       "<matplotlib.collections.PathCollection at 0x7f33ce2b42d0>"
       ]
      },
      "execution_count": 6,
