--- a/figures/SMfigs/SM_plusminus.ipynb
+++ b/figures/SMfigs/SM_plusminus.ipynb
@@ -15,8 +15,8 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-12-20T09:29:57.160994Z",
-     "start_time": "2019-12-20T09:29:56.696142Z"
+     "end_time": "2020-05-19T07:48:30.253916Z",
+     "start_time": "2020-05-19T07:48:30.248786Z"
     }
    },
    "outputs": [],
@@ -41,7 +41,12 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-05-19T07:48:30.264109Z",
+     "start_time": "2020-05-19T07:48:30.255607Z"
+    }
+   },
    "outputs": [],
    "source": [
     "import seaborn as sns\n",
@@ -56,8 +61,8 @@
    "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-12-20T09:29:57.172569Z",
-     "start_time": "2019-12-20T09:29:57.163051Z"
+     "end_time": "2020-05-19T07:48:30.291005Z",
+     "start_time": "2020-05-19T07:48:30.266060Z"
     }
    },
    "outputs": [],
@@ -77,8 +82,8 @@
    "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-12-20T09:31:01.054598Z",
-     "start_time": "2019-12-20T09:31:01.051927Z"
+     "end_time": "2020-05-19T07:48:30.294974Z",
+     "start_time": "2020-05-19T07:48:30.292554Z"
     }
    },
    "outputs": [],
@@ -93,8 +98,8 @@
    "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-12-20T09:29:57.186472Z",
-     "start_time": "2019-12-20T09:29:57.182051Z"
+     "end_time": "2020-05-19T07:48:30.301248Z",
+     "start_time": "2020-05-19T07:48:30.296325Z"
     }
    },
    "outputs": [],
@@ -110,8 +115,8 @@
    "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-12-20T09:33:30.774111Z",
-     "start_time": "2019-12-20T09:33:27.976909Z"
+     "end_time": "2020-05-19T07:49:52.513614Z",
+     "start_time": "2020-05-19T07:49:49.431693Z"
     }
    },
    "outputs": [
@@ -120,11 +125,11 @@
      "output_type": "stream",
      "text": [
       "findfont: Font family ['sans-serif'] not found. Falling back to DejaVu Sans.\n",
+      "findfont: Font family ['sans-serif'] not found. Falling back to DejaVu Sans.\n",
+      "findfont: Font family ['sans-serif'] not found. Falling back to DejaVu Sans.\n",
+      "findfont: Font family ['sans-serif'] not found. Falling back to DejaVu Sans.\n",
       "/opt/conda/lib/python3.7/site-packages/matplotlib/colors.py:1110: RuntimeWarning: invalid value encountered in less_equal\n",
       "  mask |= resdat <= 0\n",
-      "findfont: Font family ['sans-serif'] not found. Falling back to DejaVu Sans.\n",
-      "findfont: Font family ['sans-serif'] not found. Falling back to DejaVu Sans.\n",
-      "findfont: Font family ['sans-serif'] not found. Falling back to DejaVu Sans.\n",
       "findfont: Font family ['sans-serif'] not found. Falling back to DejaVu Sans.\n"
      ]
     }
@@ -146,14 +151,14 @@
     "levlw = .2\n",
     "levft = 8\n",
     "\n",
-    "fig=plt.figure(figsize=cm2inch(17.2,8))\n",
-    "gs = fig.add_gridspec(2, 4, wspace=0.06, hspace=0.1, width_ratios=[1,0.25,1,1])\n",
+    "fig=plt.figure(figsize=cm2inch(17.2,8),constrained_layout=True)\n",
+    "gs = fig.add_gridspec(2, 3, wspace=0.06, hspace=0.1)#, width_ratios=[1,0.25,1,1])\n",
     "\n",
     "# MEASUREMENT 2D\n",
     "axa = fig.add_subplot(gs[0,0])\n",
     "# plot actual 2D data\n",
     "pcm1 = plt.pcolormesh(panel_a['x'],panel_a['y'],panel_a['z'],\n",
-    "               cmap=cmap,linewidth=0,rasterized=True,norm=colors.LogNorm(vmin=vmin, vmax=vmax))\n",
+    "               cmap=cmap,linewidth=0,rasterized=True,norm=colors.LogNorm(vmin=vmin, vmax=vmax),zorder=-1)\n",
     "# plot contour lines\n",
     "cs1 = plt.contour(panel_a['x'],panel_a['y'],panel_a['z'],colors=levc,alpha=levalp,linestyles=levst,levels=levels,\n",
     "                  linewidths=levlw)\n",
@@ -174,7 +179,7 @@
     "# THEORY 2D\n",
     "axb = fig.add_subplot(gs[1,0])\n",
     "pcm2 = plt.pcolormesh(panel_b['x'],panel_b['y'],panel_b['z'],\n",
-    "               cmap=cmap,linewidth=0,rasterized=True,norm=colors.LogNorm(vmin=vmin, vmax=vmax))\n",
+    "               cmap=cmap,linewidth=0,rasterized=True,norm=colors.LogNorm(vmin=vmin, vmax=vmax),zorder=-1)\n",
     "cs2 = plt.contour(panel_b['x'],panel_b['y'],panel_b['z'],colors=levc,alpha=levalp,linestyles=levst,levels=levels,\n",
     "                  linewidths=levlw)\n",
     "cs2.levels = ['%.0f'%val for val in cs2.levels] # Recast levels to new class\n",
@@ -191,7 +196,7 @@
     "plt.ylim(-150,-100)\n",
     "\n",
     "# BEST LINECUT VS POWER\n",
-    "axc = fig.add_subplot(gs[:,2])\n",
+    "axc = fig.add_subplot(gs[:,1])\n",
     "plt.plot(panel_c['xm'],panel_c['ym'],'.',markerfacecolor='none',c=cmap(0.1),label='$-\\Omega$')\n",
     "plt.plot(panel_c['xp'],panel_c['yp'],'*',markerfacecolor='none',c=cmap(0.5),label='$+\\Omega$')\n",
     "plt.xlabel('Power at sample (dBm)')\n",
@@ -205,7 +210,7 @@
     "plt.legend(loc='lower left')\n",
     "\n",
     "# BEST LINECUT VS CURRENT\n",
-    "axd = fig.add_subplot(gs[:,3])\n",
+    "axd = fig.add_subplot(gs[:,2])\n",
     "plt.plot(panel_d['xm'],panel_d['ym'],'.',markerfacecolor='none',c=cmap(0.1),label='$-\\Omega$')\n",
     "plt.plot(panel_d['xp'],panel_d['yp'],'*',markerfacecolor='none',c=cmap(0.5),label='$+\\Omega$')\n",
     "plt.xlabel(panel_d['xlabel'])\n",
@@ -237,6 +242,7 @@
     "axb.text(0.86,0.1, '$+\\Omega$', fontsize=14, color='black', weight='bold', transform=axb.transAxes, verticalalignment = 'center', horizontalalignment = 'center')\n",
     "\n",
     "plt.savefig('SM_plusminus.pdf',bbox_inches='tight',dpi=dpi)\n",
+    "#plt.show()\n",
     "plt.close()"
    ]
   },
@@ -245,8 +251,8 @@
    "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-12-20T09:30:00.150166Z",
-     "start_time": "2019-12-20T09:30:00.133464Z"
+     "end_time": "2020-05-19T07:48:34.267736Z",
+     "start_time": "2020-05-19T07:48:34.262602Z"
     }
    },
    "outputs": [
