--- a/figures/SMfigs/SM_second_order_peak.ipynb
+++ b/figures/SMfigs/SM_second_order_peak.ipynb
@@ -15,8 +15,8 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-12-15T13:39:39.104194Z",
-     "start_time": "2019-12-15T13:39:38.855610Z"
+     "end_time": "2020-05-19T07:41:02.106067Z",
+     "start_time": "2020-05-19T07:41:01.840930Z"
     }
    },
    "outputs": [],
@@ -38,7 +38,12 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-05-19T07:41:02.698415Z",
+     "start_time": "2020-05-19T07:41:02.180795Z"
+    }
+   },
    "outputs": [],
    "source": [
     "import seaborn as sns\n",
@@ -53,8 +58,8 @@
    "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-12-15T13:39:39.328061Z",
-     "start_time": "2019-12-15T13:39:39.145206Z"
+     "end_time": "2020-05-19T07:41:02.720597Z",
+     "start_time": "2020-05-19T07:41:02.700027Z"
     }
    },
    "outputs": [
@@ -80,8 +85,8 @@
    "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-12-15T13:39:39.488191Z",
-     "start_time": "2019-12-15T13:39:39.480227Z"
+     "end_time": "2020-05-19T07:41:02.861242Z",
+     "start_time": "2020-05-19T07:41:02.837979Z"
     }
    },
    "outputs": [
@@ -107,8 +112,8 @@
    "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-12-15T13:39:39.775444Z",
-     "start_time": "2019-12-15T13:39:39.764255Z"
+     "end_time": "2020-05-19T07:41:03.191924Z",
+     "start_time": "2020-05-19T07:41:03.179735Z"
     }
    },
    "outputs": [
@@ -134,8 +139,8 @@
    "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-12-15T13:39:40.065874Z",
-     "start_time": "2019-12-15T13:39:40.055625Z"
+     "end_time": "2020-05-19T07:41:03.450868Z",
+     "start_time": "2020-05-19T07:41:03.445959Z"
     }
    },
    "outputs": [
@@ -161,8 +166,8 @@
    "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-12-15T13:39:40.573269Z",
-     "start_time": "2019-12-15T13:39:40.567991Z"
+     "end_time": "2020-05-19T07:41:03.676940Z",
+     "start_time": "2020-05-19T07:41:03.674474Z"
     }
    },
    "outputs": [],
@@ -176,8 +181,8 @@
    "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-12-15T13:39:41.006848Z",
-     "start_time": "2019-12-15T13:39:41.004368Z"
+     "end_time": "2020-05-19T07:41:04.078432Z",
+     "start_time": "2020-05-19T07:41:04.075500Z"
     }
    },
    "outputs": [],
@@ -191,8 +196,8 @@
    "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-12-15T13:39:41.693458Z",
-     "start_time": "2019-12-15T13:39:41.680920Z"
+     "end_time": "2020-05-19T07:41:04.723129Z",
+     "start_time": "2020-05-19T07:41:04.719275Z"
     }
    },
    "outputs": [],
@@ -219,8 +224,8 @@
    "execution_count": 10,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-12-15T13:49:05.821699Z",
-     "start_time": "2019-12-15T13:49:05.189984Z"
+     "end_time": "2020-05-19T07:46:17.627668Z",
+     "start_time": "2020-05-19T07:46:16.581884Z"
     }
    },
    "outputs": [
@@ -240,8 +245,8 @@
     "ymin = -90\n",
     "ymax = -65\n",
     "\n",
-    "fig = plt.figure(figsize=cm2inch(8.6,12))\n",
-    "gs = gridspec.GridSpec(2, 3, wspace=0.05, hspace=0.3, height_ratios=[1,2])\n",
+    "fig = plt.figure(figsize=cm2inch(8.6,12),constrained_layout=True)\n",
+    "gs = fig.add_gridspec(2, 3, height_ratios=[1,2])\n",
     "\n",
     "axa = fig.add_subplot(gs[1,0])\n",
     "plt.axhline(camp,c='grey',ls='dotted')\n",
@@ -250,8 +255,9 @@
     "plt.xlabel(panel_a['xlabel'])\n",
     "plt.ylabel('Sideband amplitude (dBm)')\n",
     "plt.ylim(ymin,ymax)\n",
+    "plt.xticks([0,4,8])\n",
     "alims = plt.gca().get_ylim()\n",
-    "plt.annotate(\"(b),(c)\", xy=(4, -70-7), xytext=(1.5, -70),arrowprops=dict(arrowstyle=\"->\"))\n",
+    "plt.annotate(\"(b),(c)\", xy=(4, -70-7), xytext=(1.5, -70),arrowprops=dict(arrowstyle=\"->\",color='k'))\n",
     "\n",
     "axb = fig.add_subplot(gs[1,1])\n",
     "# plt.axhline(max(panel_b['ymeas']),c='grey',ls='dashed')\n",
@@ -264,7 +270,7 @@
     "plt.gca().set_yticklabels([])\n",
     "# plt.xticks([-1500,-750,0,750,1500])\n",
     "plt.gca().xaxis.set_major_formatter(formatter)\n",
-    "plt.annotate(\"(a),(c)\", xy=(0, -70-7), xytext=(-.600, -70),arrowprops=dict(arrowstyle=\"->\"))\n",
+    "plt.annotate(\"(a),(c)\", xy=(0, -70-7), xytext=(-.600, -70),arrowprops=dict(arrowstyle=\"->\",color='k'))\n",
     "plt.ylim(alims)\n",
     "\n",
     "axc = fig.add_subplot(gs[1,2])\n",
@@ -272,9 +278,10 @@
     "plt.plot(panel_c['xmeas'],panel_c['ymeas'],'o',markerfacecolor='none',c=cmap(0.1))\n",
     "plt.plot(panel_c['xtheo'],panel_c['ytheo'],c=cmap(0.5))\n",
     "plt.xlabel('P$_\\mathrm{in}$ (dBm)')\n",
+    "plt.xticks([-150,-125,-100])\n",
     "# plt.ylabel('Sideband amplitude (dBm)')\n",
     "plt.gca().set_yticklabels([])\n",
-    "plt.annotate(\"(a),(b)\", xy=(-129, -70-7), xytext=(-139, -70),arrowprops=dict(arrowstyle=\"->\"))\n",
+    "plt.annotate(\"(a),(b)\", xy=(-129, -70-7), xytext=(-139, -70),arrowprops=dict(arrowstyle=\"->\",color='k'))\n",
     "plt.ylim(alims)\n",
     "\n",
     "axd = fig.add_subplot(gs[0,:])\n",
@@ -286,13 +293,13 @@
     "plt.ylabel('Power spectrum (dBm)')\n",
     "plt.xlim(-3.1,3.1)\n",
     "    \n",
-    "axa.text(0.12,0.96, '(b)', fontsize=figtextsize, color='black', weight='bold',transform=axa.transAxes, verticalalignment = 'center', horizontalalignment = 'center')\n",
-    "axb.text(0.12,0.96, '(c)', fontsize=figtextsize, color='black', weight='bold', transform=axb.transAxes, verticalalignment = 'center', horizontalalignment = 'center')\n",
-    "axc.text(0.12,0.96, '(d)', fontsize=figtextsize, color='black', weight='bold', transform=axc.transAxes, verticalalignment = 'center', horizontalalignment = 'center')\n",
+    "axa.text(0.14,0.96, '(b)', fontsize=figtextsize, color='black', weight='bold',transform=axa.transAxes, verticalalignment = 'center', horizontalalignment = 'center')\n",
+    "axb.text(0.14,0.96, '(c)', fontsize=figtextsize, color='black', weight='bold', transform=axb.transAxes, verticalalignment = 'center', horizontalalignment = 'center')\n",
+    "axc.text(0.14,0.96, '(d)', fontsize=figtextsize, color='black', weight='bold', transform=axc.transAxes, verticalalignment = 'center', horizontalalignment = 'center')\n",
     "axd.text(0.04,0.9, '(a)', fontsize=figtextsize, color='black', weight='bold', transform=axd.transAxes, verticalalignment = 'center', horizontalalignment = 'center')\n",
     "\n",
     "plt.savefig('SM_second_order_peak.pdf',bbox_inches='tight',dpi=dpi)\n",
-    "# plt.show()\n",
+    "#plt.show()\n",
     "plt.close()"
    ]
   },
